--- a/LearnHTML.html
+++ b/LearnHTML.html
@@ -7,5 +7,20 @@
 </head>
 <body>
     <!-- Hi I am helal. I am start learning Html .I am beginer for web development-->
+    <!-- lete start happy learning html-->
+    <!--This is a heading tags-->
+    <h1>This is heading one.It means large size</h1>
+    <h2>This is heading two.It means large size</h2>
+    <h3>This is heading three.It means medium large</h3>
+    <h4>This is heading four .It means small size</h4>
+    <h5>This is heading four .It means small size</h5>
+    <h6>This is heading four .It means small size</h6>
+    <!--heading tag end-->
+    <!-- paragraph tag start-->
+    <P>Hey I am Helal I am learning Web development with Jhankar Mahbub and google.I am already learned basic <b>html and css </b> html and css </P>
+    <P>Hey I am Helal I am learning Web development with Jhankar Mahbub and google.I am already learned basic <strong>html and css</strong></P>
+    <!--paragraph tag end-->
+    
+
 </body>
 </html>
