--- a/LearnHTML.html
+++ b/LearnHTML.html
@@ -20,7 +20,50 @@
     <P>Hey I am Helal I am learning Web development with Jhankar Mahbub and google.I am already learned basic <b>html and css </b> html and css </P>
     <P>Hey I am Helal I am learning Web development with Jhankar Mahbub and google.I am already learned basic <strong>html and css</strong></P>
     <!--paragraph tag end-->
-    
+    <!-- 1-5 HTML tag attribute, anchor, href, navigate -->
+    <a href="https://www.google.com" target="_blank">Google Me</a><br>
+    <a href="https://www.Youtube.com">Youtube</a>
+    <a href="https://www.youtube.com/watch?v=tcskp-ncN0I">Portfolio videos</a>
+     <!-- 1-5 HTML tag attribute, anchor, href, navigate -->
+     <!-- image tage start image folder local image -->
+     <img src="ap.jpg" alt="Helal photo" width="100%">
+     <img src="image/profile11.png">
+      <!-- image tage start image folder local image -->
+    <!-- list tags start -->
+    <!-- unordered list  -->
+    <ul>
+        <li>helal</li>
+        <li>helal</li>
+        <li>helal</li>
+    </ul>
+    <ul type="square">
+        <li>helal</li>
+        <li>helal</li>
+        <li>helal</li>
+    </ul>
+    <ul type="circle">
+        <li>helal</li>
+        <li>helal</li>
+        <li>helal</li>
+    </ul>
+    <ul type="disc">
+        <li>helal</li>
+        <li>helal</li>
+        <li>helal</li>
+    </ul>
+    <!-- unordered list type stop -->
+    <!--ordered list start-->
+    <ol>
+        <li>helal</li>
+        <li>helal</li>
+        <li>helal</li>
+    </ol>
+    <ol tpye="i">
+        <ol>helal</ol>
+        <ol>helal</ol>
+        <ol>helal</ol>
+    </ol>
+
 
 </body>
 </html>
